cmake_minimum_required(VERSION 3.6)
project(CCF)

set(CMAKE_CXX_STANDARD 11)

add_executable(unitlted1 STL_algorithm_lower_bound.cpp)
add_executable(unitlted2 STL_algorithm_next_permutation.cpp)
add_executable(unitlted3 STL_stack.cpp)
add_executable(unitlted4 STL_queue.cpp)
add_executable(unitlted5 STL_set.cpp)
add_executable(unitlted6 STL_find.cpp)
add_executable(unitlted7 STL_erase.cpp)
